nav bar links are now dynamically generated when a new page contains the 'nav' tag. These links also apply aria-curren accordingly.

--- a/src/_includes/about.njk
+++ b/src/_includes/about.njk
@@ -1,10 +1,15 @@
 ---
 layout: 'base.njk'
 eleventyComputed:
+  pageUrl: "{{page.url}}"
   SEO: 
     metaTitle: "{{title}}"
     metaDescription: "{{summary}}"
     metaImage: "{{landingImage}}"
+tags: 
+ - nav
+pageName: "About"
+date: 2021-03-01
 ---
 
 <div class="section spacing top-m-s">
