--- a/src/_includes/contact.njk
+++ b/src/_includes/contact.njk
@@ -1,10 +1,15 @@
 ---
 layout: 'base.njk'
 eleventyComputed:
+  pageUrl: "{{page.url}}"
   SEO: 
     metaTitle: "{{title}}"
     metaDescription: "{{summary}}"
     metaImage: "{{image}}"
+tags: 
+ - nav
+pageName: "Contact"
+date: 2021-04-01
 ---
 <div class="section contact-page spacing top-m-s full-page">
 
