--- a/src/_includes/work.njk
+++ b/src/_includes/work.njk
@@ -1,10 +1,15 @@
 ---
 layout: 'base.njk'
 eleventyComputed:
+  pageUrl: "{{page.url}}"
   SEO: 
     metaTitle: "{{title}}"
     metaDescription: "{{summary}}"
     metaImage: "{{image}}"
+tags:
+  - nav
+pageName: "Work"
+date: 2021-02-01
 ---
 
 <div class="section spacing bottom-m-l top-m-m">
