--- a/src/_includes/partials/_footer.njk
+++ b/src/_includes/partials/_footer.njk
@@ -21,10 +21,9 @@
                 <div class="footer-category-title">
                     <p>Sitemap</p>
                 </div>
-                <a href="/">Home</a>
-                <a href="/work/">Work</a>
-                <a href="/about/">About</a>
-                <a href="/contact/">Contact</a>
+
+                {% include 'partials/_site-links.njk' %}
+                
             </div>
         </div>
     </div>
