--- a/src/_includes/partials/_footer.njk
+++ b/src/_includes/partials/_footer.njk
@@ -1,7 +1,7 @@
 <footer>
     <div class="spacing">
         <div class="copy-right">
-            <p>Copyright @{{ utils.currentYear() }} John Doe</p>
+            <p>Copyright @{{ utils.currentYear() }} {{site.author}}</p>
         </div>
         <div class="footer-links">
             <div class="social-media">
@@ -23,7 +23,7 @@
                 </div>
 
                 {% include 'partials/_site-links.njk' %}
-                
+
             </div>
         </div>
     </div>
