fixed landing text and added dummy avatar

--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -12,10 +12,10 @@ eleventyComputed:
         <div class="avatar">
             <img src="{{ landingImage }}" alt="{{ landingImageAlt }}"> 
         </div>
-        <h1 class="intro">    
+        <h1 class="intro spacing">    
             {{ intro }}
         </h1>
-        <h1 class="short-summary">
+        <h1 class="short-summary spacing">
             {{ summary }}
         </h1>
 
