--- a/src/style.css
+++ b/src/style.css
@@ -444,6 +444,12 @@ nav .nav-links li{
 .landing .avatar{
     max-width: 160px;
     margin: auto;
+    margin-bottom: 4vh;
+}
+
+.landing .avatar img{
+    border-radius: 50%;
+    box-shadow: 0px 0px 0px 10px rgb(237 237 237);
 }
 
 .landing h1{
@@ -844,7 +850,6 @@ footer .sitemap a{
     }
 
     .landing {
-        background-color: var(--page-bg-colour);
         min-height: 100vh !important;
         margin-top: calc(-1 * var(--nav-height)) !important;
     }
