--- a/src/_includes/work.njk
+++ b/src/_includes/work.njk
@@ -16,9 +16,9 @@ eleventyComputed:
         <ol>
             <li>
                 {% if page.url != pagination.href.first %}
-                    <a href="{{ pagination.href.first }}">First</a>
+                    <a href="{{ pagination.href.first }}"><<</a>
                 {% else %}
-                    First
+                    <<
                 {% endif %}
             </li>
 
@@ -45,9 +45,9 @@ eleventyComputed:
 
             <li>
                 {% if page.url != pagination.href.last %}
-                    <a href="{{ pagination.href.last }}">Last</a>
+                    <a href="{{ pagination.href.last }}">>></a>
                 {% else %}
-                    Last
+                    >>
                 {% endif %}
             </li>
         </ol>
