updates to about page

--- a/src/_includes/about.njk
+++ b/src/_includes/about.njk
@@ -22,7 +22,7 @@ eleventyComputed:
             <div class="about-links">
                 {% for item in links %}
                     <a href="{{ item.url }}" 
-                      class="btn-primary bg-white font-italics"> 
+                      class="border-round-sm border-solid"> 
                       {{ item.linkName }} 
                       <span>&#8594;</span>
                     </a>
