--- a/public/style.css
+++ b/public/style.css
@@ -281,6 +281,14 @@ input:focus, textarea:focus{
     margin-left: 20px;
 }
 
+.border-round-sm{
+    border-radius: 7px;
+}
+
+.border-solid{
+    border: .05px solid var(--white);
+}
+
 /* #endregion */
 
 /* #region NavigationBar */
@@ -680,7 +688,6 @@ footer .sitemap a{
 .about-links a{
     text-align: left;
     position: relative;
-    border: .05px solid rgb(233, 233, 233);
     padding: 2px 35px 2px 10px;
     margin: unset;
 }
@@ -701,6 +708,7 @@ footer .sitemap a{
 .skill-card{
     position: relative;
     max-width: 250px;
+    min-height: 250px;
 }
 
 .skill-card p{
@@ -845,6 +853,12 @@ footer .sitemap a{
 
 /* #region Media Queries */
 
+@media screen and (min-width:1500px) {
+    /* .spacing{
+        max-width: 1400px;
+    } */
+}
+
 @media screen and (max-width:1100px){
 
     .section{
@@ -900,6 +914,12 @@ footer .sitemap a{
     }
 }
 
+@media screen and (max-width:900px){
+    .skill-card{
+        min-height: unset;
+    }
+}
+
 @media screen and (max-width:450px){
     .nav-links{
         display: none !important;
@@ -940,7 +960,7 @@ footer .sitemap a{
     }
 
     .about-links{
-        margin: auto;
+        /* margin: auto; */
     }
 
     .skills-container{
