--- a/src/_includes/partials/_contact-form.njk
+++ b/src/_includes/partials/_contact-form.njk
@@ -1,15 +1,15 @@
 <form name="contact-form" method="POST" data-netlify="true" class="contact-form">
     <div class="contact-detail">
         <label for="name">
-            Name
+            <span>*</span>Name
         </label>
-        <input name="name" type="text" placeholder="John Doe" class="border-round-sm">
+        <input name="name" type="text" required placeholder="John Doe" class="border-round-sm">
     </div>
     <div class="contact-detail">
         <label for="email">
-            Email
+            <span>*</span>Email
         </label>
-        <input name="email" type="email" placeholder="example@domain.com" class="border-round-sm">
+        <input name="email" type="email" required placeholder="example@domain.com" class="border-round-sm">
     </div>
     <div class="contact-detail">
         <label for="message">
