--- a/src/_includes/partials/_header.njk
+++ b/src/_includes/partials/_header.njk
@@ -4,11 +4,14 @@
 
              <!-- Desktop nav-->   
             <div class="nav-main">
+                <a href="/" class="nav-logo">
                 <li>
-                    <a href="/" class="nav-logo">
-                        <object type="image/svg+xml" data="{{ site.logo }}"></object>
-                    </a>
+                    
+                    <object type="image/svg+xml" data="{{ site.logo }}">
+                    </object>
+                    
                 </li>
+                </a>
             </div>
             <ul class="nav-links">
 
@@ -17,30 +20,7 @@
             </ul>
 
             <!-- Mobile nav-->
-            <div class="hamburger">
-                <div class="hamburger-icon" onclick="ToggleHamburger('.hamburger-content')">
-                    <div class="line top-line"></div>
-                    <div class="line"></div>
-                    <div class="line bottom-line"></div>
-                </div>
-
-                <div class="hamburger-content">
-                    <ul class="hamburger-links">
-
-                         {% for nav in collections.nav %}
-                            <li>
-                                <a href="{{nav.data.pageUrl}}" 
-                                {% if page.url == nav.data.pageUrl %} 
-                                aria-current="page"
-                                {% endif %}>
-                                    <span>{{nav.data.pageName}}</span>
-                                </a>
-                            </li>
-                        {% endfor %}
-                        
-                    </ul>
-                </div>
-            </div>
+            {% include 'partials/_mobile-header.njk' %}
 
         </div>
     </nav>
