fixed mobile nav by adding span tag back again

--- a/src/_includes/partials/_header.njk
+++ b/src/_includes/partials/_header.njk
@@ -13,11 +13,8 @@
                 </li>
                 </a>
             </div>
-            <ul class="nav-links">
 
-                {% include 'partials/_site-links.njk' %}
-
-            </ul>
+            {% include 'partials/_site-header.njk' %}
 
             <!-- Mobile nav-->
             {% include 'partials/_mobile-header.njk' %}
