--- a/src/_includes/partials/_mobile-header.njk
+++ b/src/_includes/partials/_mobile-header.njk
@@ -8,7 +8,16 @@
     <div class="hamburger-content">
         <ul class="hamburger-links">
 
-                {% include 'partials/_site-links' %}
+            {% for nav in collections.nav %}
+                <li>
+                    <a href="{{nav.data.pageUrl}}" 
+                    {% if page.url == nav.data.pageUrl %} 
+                        aria-current="page"
+                    {% endif %}>
+                        <span>{{nav.data.pageName}}</span>
+                    </a>
+                </li>
+            {% endfor %}
             
         </ul>
     </div>
