--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -38,14 +38,22 @@ date: 2021-01-01
 
     <div class="projects">
 
-        {% for project in collections.featured | reverse %}
-            {% include 'partials/_project-snippet.njk' %}
-        {% endfor %}
+        {% if collections.featured.length < 0 %}
+            {# TODO #}
+            <h2 class="alert">
+                Comming Soon! Watch this space 👀
+            </h2>
+        {% else %}
+            {% for project in collections.featured | reverse %}
+                {% include 'partials/_project-snippet.njk' %}
+            {% endfor %}
+        {% endif %}
         
     </div>
 
     <a class="page-link" href="/work/">All Projects <span>&#8594;</span></a>
 </div>
+
 
 <div class="section contact-page spacing last-section top-m-l">
     <div class="title">
