--- a/src/_includes/partials/_header.njk
+++ b/src/_includes/partials/_header.njk
@@ -6,10 +6,7 @@
             <div class="nav-main">
                 <a href="/" class="nav-logo">
                 <li>
-                    
-                    <object type="image/svg+xml" data="{{ site.logo }}">
-                    </object>
-                    
+                    <img src="{{site.logo}}" alt="Logoipsum">
                 </li>
                 </a>
             </div>
