--- a/src/_includes/about.njk
+++ b/src/_includes/about.njk
@@ -27,8 +27,9 @@ date: 2021-03-01
             </p>
             <div class="about-links">
                 {% for item in links %}
-                    <a href="{{ item.url }}" 
-                      class="border-round-sm btn-primary"> 
+                    <a  href="{{ item.url }}" 
+                        class="border-round-sm btn-primary"
+                        target="_blank"> 
                       {{ item.linkName }} 
                       <span>&#8594;</span>
                     </a>
@@ -78,7 +79,7 @@ date: 2021-03-01
             {% endfor %}
         </ul>
         {% if interestsImage != "" %}
-            <img src="{{ interestsImage }}" alt="placeholderImage">
+            <img src="{{ interestsImage }}" alt="placeholderImage" class="border-round-lrg">
         {% endif %}
     </div>
 </div>
