--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,7 @@
     --h1: #F0544F;
     --input-field-background: #F8F8F8;
     --placeholder: #D2D1D1;
+    --featured-card-length: 1000px;
 }
 
 /* #region General */
@@ -196,7 +197,7 @@ input:focus, textarea:focus{
     text-decoration: underline;
     display: block;
     font-family: Poppins-Light;
-    font-size: 16px;
+    font-size: 20px;
 }
 
 .bottom-m-s{
@@ -552,7 +553,7 @@ nav .nav-links [aria-current]:hover, footer [aria-current]:hover{
     grid-column-gap: 36px;
     margin: auto;
     margin-bottom: 5vh;
-    max-width: 1000px;
+    max-width: var(--featured-card-length);
     box-shadow: 0px 0px 9px 4px rgb(0 0 0 / 46%);
     background-color: var(--secondary-dark);
 }
