removed section class for about markdown

--- a/src/_includes/about.njk
+++ b/src/_includes/about.njk
@@ -84,7 +84,7 @@ date: 2021-03-01
     </div>
 </div>
 
-<div class="section spacing markdown bottom-m-l">
+<div class="spacing markdown bottom-m-l">
 
     {{ content | safe}}
 
