--- a/src/style.css
+++ b/src/style.css
@@ -559,11 +559,11 @@ nav .nav-links [aria-current]:hover, footer [aria-current]:hover{
     max-width: var(--featured-card-length);
     box-shadow: 0px 0px 9px 4px rgb(0 0 0 / 46%);
     background-color: var(--secondary-dark);
-    max-height: 300px;
+    height: 300px;
 }
 
 .card .card-image-wrapper{
-    max-height: inherit;
+    height: inherit;
 }
 
 .card .content{
@@ -1067,12 +1067,12 @@ footer .sitemap a{
     }
 
     .card{
-        max-height: unset;
+        height: unset;
         grid-template-columns: 1fr;
     }
 
     .card .card-image-wrapper{
-        max-height: 250px;
+        height: 250px
     }
 
     .card-cta{
